...
    <Button
        style="@style/ButtonDelete"
        android:id="@+id/btn_display_delete"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
        app:layout_constraintBottom_toTopOf="@+id/gdl_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lbl_display"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp" />
...
    <Button
        style="@style/ButtonNumberPad"
        android:id="@+id/btn_number_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gdl_display"
        app:layout_constraintEnd_toStartOf="@+id/btn_number_eight"
        app:layout_constraintBottom_toTopOf="@+id/gdl_top" />

...
        app:layout_constraintStart_toEndOf="@+id/btn_number_seven"
        app:layout_constraintTop_toTopOf="@id/gdl_display"
        app:layout_constraintEnd_toStartOf="@+id/btn_number_nine"
        app:layout_constraintBottom_toTopOf="@+id/gdl_top"
        android:layout_marginTop="0dp" />
...
        android:text="9"
        app:layout_constraintStart_toEndOf="@+id/btn_number_eight"
        app:layout_constraintEnd_toStartOf="@+id/btn_operator_divide"
        app:layout_constraintTop_toTopOf="@id/gdl_display"
        app:layout_constraintBottom_toTopOf="@+id/gdl_top"
...
    <Button
        style="@style/ButtonNumberPad"
        android:id="@+id/btn_number_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_number_five"
        app:layout_constraintBottom_toTopOf="@+id/gdl_middle"
        app:layout_constraintTop_toTopOf="@+id/gdl_top"
...

        app:layout_constraintStart_toEndOf="@+id/btn_number_four"
        app:layout_constraintEnd_toStartOf="@+id/btn_number_six"
        app:layout_constraintBottom_toTopOf="@+id/gdl_middle"
        app:layout_constraintTop_toTopOf="@+id/gdl_top" />
...
        app:layout_constraintStart_toEndOf="@+id/btn_number_five"

        app:layout_constraintEnd_toStartOf="@+id/btn_operator_multiply"

        app:layout_constraintBottom_toTopOf="@+id/gdl_middle"
...
    <Button
        style="@style/ButtonNumberPad"
        android:id="@+id/btn_number_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_number_two"
        app:layout_constraintBottom_toTopOf="@+id/gdl_bottom"
        app:layout_constraintTop_toTopOf="@+id/gdl_middle"
...
        app:layout_constraintStart_toEndOf="@+id/btn_number_one"

        app:layout_constraintEnd_toStartOf="@+id/btn_number_three"
        app:layout_constraintBottom_toTopOf="@+id/gdl_bottom"
        app:layout_constraintTop_toTopOf="@+id/gdl_middle"
...
        app:layout_constraintStart_toEndOf="@+id/btn_number_two"

        app:layout_constraintEnd_toStartOf="@+id/btn_operator_subtract"
        app:layout_constraintBottom_toTopOf="@+id/gdl_bottom"
        app:layout_constraintTop_toTopOf="@+id/gdl_middle"
...
    <Button
        style="@style/ButtonNumberPad"
        android:id="@+id/btn_number_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_decimal"

        app:layout_constraintTop_toTopOf="@+id/gdl_bottom"
...
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/btn_evaluate"

        app:layout_constraintTop_toTopOf="@+id/gdl_bottom"
...

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_operator_add"

        app:layout_constraintTop_toTopOf="@+id/gdl_bottom"
...
        android:text="C"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/btn_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_sqrt"
        app:layout_constraintTop_toTopOf="@+id/gdl_last"
        android:layout_marginTop="0dp" />
...
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/btn_open_b"
        app:layout_constraintTop_toTopOf="@+id/gdl_last"
        android:layout_marginTop="0dp" />
...

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_close_b"
        app:layout_constraintTop_toTopOf="@+id/gdl_last"
        android:layout_marginTop="0dp" />
...
